# droidcat-SRE-deprecated

./: Core_Context.h  DROIDCAT_USAGES  Main_Thread.c  Main_Thread_64.c  Main_Thread_Start.c  Readme.md  Thread_Pool.c  Thread_Pool.h  decode.dsc  main_thread.c  meson.build  meson_options.txt  settings.toml
cpu/: CPU_Time.c  CPU_Time.h  Hardware_Info.c  Hardware_Info.h  Physical_CPU.c
data/: Doubly_Linked.c  Doubly_Linked.h  FIFO_Queue.c  FIFO_Queue.h
doc/: DROIDCAT.md  STRUCTURE.md
unit/: Doubly_Linked_TEST.c  Thread_Pool_TEST.c
